--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
 <div class="row">
   <div class="col-xs-12 col-md-4 section-heading">
-    <h1>Relevant Coursework</h1>
+    <h1>Selected Coursework</h1>
     
   </div>
   <div class="col-xs-12 col-md-8">
@@ -317,7 +317,7 @@
 
 <tbody>
 <tr>
-<td>Sum 2017:</td>
+<td>Summer 2017:</td>
 <td><strong>AMATH 351:</strong> <em>Introduction to Differential Equations and Applications</em></td>
 </tr>
 
@@ -327,7 +327,7 @@
 </tr>
 
 <tr>
-<td>Sum 2016:</td>
+<td>Summer 2016:</td>
 <td><strong>AMATH 352:</strong> <em>Applied Linear Algebra and Numerical Analysis</em></td>
 </tr>
 </tbody>
